--- a/assets/milligram.styl
+++ b/assets/milligram.styl
@@ -4,8 +4,8 @@
 
 // @import "https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"
 
-:root
-  font-size 10px
+// :root
+//   font-size 10px
 
 
 
